--- a/src/template.html
+++ b/src/template.html
@@ -157,7 +157,7 @@ experience. Gave inputs and worked on the “my-Raymond” website
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/raymonds.jpg"
+                      src="./assets/Raymonds.jpg"
                     />
                   </div>
                 </a>
@@ -190,7 +190,7 @@ humanitarian.
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/microsoft.jpg"
+                      src="./assets/Microsoft.jpg"
                     />
                   </div>
                 </a>
@@ -225,7 +225,7 @@ One of the top performers in India for Internshaala, during the given period
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/internshaala.jpg"
+                      src="./assets/Internshaala.jpg"
                     />
                   </div>
                 </a>
